[metadata]
name = Zundler
summary = Bundle assets of distributed HTML docs into one self-contained HTML file
description_file = README.md
author = Adrian Vollmer
author_email = computerfluesterer@protonmail.com
home_page = https://github.com/AdrianVollmer/self-contained-html
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    sphinx
    bs4
    importlib-metadata; python_version<"3.8"

[options.entry_points]
console_scripts =
    zundler = src.__main__:main

[files]
packages = src

[mypy]
python_version = 3.8
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True

[flake8]
show-source = True
builtins = unicode
max-line-length = 100
